implement Mickey's suggestions round 1

--- a/app/assets/stylesheets/album_index.css
+++ b/app/assets/stylesheets/album_index.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /*background-color: #FFF5EE;*/
+  /*background-color: white;*/
 }
 
 .album-item img{
@@ -20,5 +20,5 @@
 }
 
 .album-item:hover {
-  outline: 5px solid #B22222;
+  outline: 5px solid #e2e23d;
 }
