--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -1,11 +1,11 @@
 .album-show {
   color: white;
-  background-color: black;
+  background-color: #151515;
 }
 
 .show-splash {
   width: 100%;
-  height: 230px;
+  height: 300px;
   background-image: url("https://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
   background-size: cover;
   overflow: hidden;
@@ -17,13 +17,13 @@
   font-family: 'Limelight', cursive;
   font-size: 40px;
   position: absolute;
-  top: 30px;
+  top: 65px;
   left: 250px;
 }
 
 .show-info {
   position: absolute;
-  top: 80px;
+  top: 130px;
   left: 250px;
   font-weight: bold;
   font-size: 20px;
@@ -33,7 +33,7 @@
 .album-art {
   position: absolute;
   display: flex;
-  top: 15px;
+  top: 47px;
   left: 30px;
 }
 
@@ -52,12 +52,16 @@
 .album-tracks-container h2{
   font-size: 30px;
   font-weight: bold;
+  padding-top: 15px;
+  margin-bottom: 10px;
+  color: white;
 }
 
 .album-track-list {
   width: 70%;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   border-top: 1px solid white;
+  color: white;
   margin-top: 10px;
 }
 
@@ -65,13 +69,11 @@
   padding-left: 10px;
   padding-bottom: 10px;
   padding-top: 10px;
-  border-left: 5px solid black;
   border-bottom: 1px solid white;
 }
 
 .album-track-list li:hover {
-  border-left: 5px solid #B22222;
-  color: #B22222;
+  border-left: 5px solid #e2e23d;
 }
 
 .album-track-list h3 {
@@ -101,6 +103,7 @@
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 15px;
+  color: white;
 }
 
 .track-form-input {
@@ -128,11 +131,11 @@
 }
 
 .track-form-button:hover {
-  color: #B22222;
-  border-color: #B22222;
+  color: #e2e23d;
+  border-color: #e2e23d;
 }
 
 .track-errors {
-  color: #B22222;
+  color: #e2e23d;
   margin: auto;
 }
