--- a/app/assets/stylesheets/auth_form.css
+++ b/app/assets/stylesheets/auth_form.css
@@ -5,7 +5,7 @@
   padding: 20px;
   border: 1px solid white;
   border-radius: 5px;
-  background-color: black;
+  background-color: #151515;
   color: white;
 }
 
@@ -15,7 +15,7 @@
 }
 
 .auth-errors {
-  color: #B22222;
+  color: #e2e23d;
   list-style-type: none;
 }
 
@@ -37,8 +37,8 @@
 }
 
 .auth-button:hover {
-  border: 1px solid #B22222;
-  color: #B22222;
+  border: 1px solid #e2e23d;
+  color: #e2e23d;
 }
 
 .auth-greeting img{
