fix profile icons, space out track show splash

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -77,13 +77,13 @@
 }
 
 .transcription-logo {
-  background-image: url("http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_22/v1481601478/Spotlight/musical-note-white.png");
+  background-image: url("https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_22/v1481601478/Spotlight/musical-note-white.png");
   height: 20px;
   width: 20px;
 }
 
 .comment-logo {
-  background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_22/v1481601478/Spotlight/comment-white.png');
+  background-image: url('https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_22/v1481601478/Spotlight/comment-white.png');
   height: 20px;
   width: 20px;
 }
