--- a/app/assets/stylesheets/track_show.css
+++ b/app/assets/stylesheets/track_show.css
@@ -4,7 +4,7 @@
 
 .track-splash {
   width: 100%;
-  height: 200px;
+  height: 265px;
   background-image: url("https://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
   background-size: cover;
   overflow: hidden;
@@ -16,17 +16,18 @@
   font-family: 'Limelight', cursive;
   font-size: 40px;
   position: absolute;
-  top: 15px;
+  top: 20px;
   left: 50px;
 }
 
 .track-info {
   position: absolute;
-  top: 60px;
+  top: 80px;
   left: 50px;
   font-weight: bold;
   font-size: 20px;
   width: 90%;
+  line-height: 1.5;
 }
 
 .track-lyrics {
