--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -36,6 +36,7 @@
   width: 100%;
   height: 300px;
   overflow: hidden;
+  opacity: 0.6;
   background-image: url("https://res.cloudinary.com/doepem37s/image/upload/v1478043010/broadway_wsfzku.jpg");
 }
 
