change home page gif to reflect css changes

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -111,8 +111,8 @@
 }
 
 .exp-track-img {
-  background-image: url('https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_400/v1480224396/Spotlight/annotation.gif');
-  height: 290px;
+  background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_450/v1481700191/annotation.5_i0zwg9.gif');
+  height: 320px;
 }
 
 .site-info section .exp2 {
