--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -105,6 +105,13 @@ nav .dropdown-header {
   font-size: 20px;
 }
 
+.search {
+  height: 20px;
+  width: 20px;
+  margin-top: 4px;
+  background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_20/v1482539822/Spotlight/search.png');
+}
+
 .footer {
   display: flex;
   background-color: black;
