add cancel button to annotation form

--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,7 +1,7 @@
 .search-icon {
   height: 20px;
   width: 20px;
-  /*margin-top: 4px;*/
+  margin-top: 4px;
   background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_20/v1482539822/Spotlight/search.png');
 }
 
