--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,40 +1,43 @@
 .search-icon {
   height: 20px;
   width: 20px;
-  margin-top: 4px;
+  margin-top: 7px;
+  margin-left: 12px;
   background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_20/v1482539822/Spotlight/search.png');
 }
 
 .search-input {
-  font-size: 18px;
-  width: 200px;
-  margin-left: 20px;
+  font-size: 24px;
+  margin-left: 30px;
   position: relative;
 }
 
-.search-results {
+.close-search {
   position: absolute;
-  top: 47px;
+}
+
+.search-results {
   z-index: 5;
-  min-width: 230px;
 }
 
 .search-list {
   display: flex;
-  flex-direction: column;
-  background-color: #2a2a2a;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.search-list li {
-  border-bottom: 1px solid white;
+.search-art {
+  width: 205px;
+  height: 205px;
+  overflow: hidden;
+}
+
+.search-item {
   display: flex;
+  width: 205px;
   flex-direction: column;
-  padding-left: 15px;
-  height: 50px;
-}
-
-.search-list li:last-child {
-  border-bottom: none;
+  margin: 10px;
+  margin-bottom: 20px;
 }
 
 .search-item:hover {
@@ -47,4 +50,5 @@
 
 .search-track-title {
   font-weight: bold;
+  font-size: 20px;
 }
