--- a/app/assets/stylesheets/track_show.css
+++ b/app/assets/stylesheets/track_show.css
@@ -4,7 +4,7 @@
 
 .track-splash {
   width: 100%;
-  height: 265px;
+  height: 310px;
   background-image: url("https://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
   background-size: cover;
   overflow: hidden;
@@ -26,8 +26,19 @@
   left: 50px;
   font-weight: bold;
   font-size: 20px;
-  width: 90%;
+  width: 60%;
   line-height: 1.5;
+}
+
+.player-div {
+  width: 25%;
+  position: absolute;
+  right: 50px;
+  top: 4px;
+}
+
+iframe {
+  border: none;
 }
 
 .track-lyrics {
@@ -71,7 +82,7 @@ pre {
   padding: 10px;
   border-radius: 5px;
   -webkit-animation-name: bounce;
-  animation: bounce 2s 2;
+  animation: bounce 2.5s 4;
 }
 
 .highlight {
